hphp/hack/test/typecheck/runtime_generic_bad.php.exp
File "runtime_generic_bad.php", line 4, characters 10-10:
Generics can only be used in type hints since they are erased at runtime. (Typing[4124])
